test/deprecated/fieldNumToName.good
fieldNumToName.chpl:4: error: fieldNumToName deprecated. Use getFieldName
