test/deprecated/fieldNumToName.chpl
record R {
  var x:int;
}
writeln(fieldNumToName(R, 1));

